# OptionScanner

./: .env.example  .gitignore  README.md  docker-compose.yml  ideas.txt  log_out.txt  server_out.txt  status.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: brokers.py  market_data.py  scanner.py  strategies.py  system.py
backend/app/brokers/: base.py  ibkr.py  mock.py
backend/app/core/: settings.py
backend/app/db/: models.py  session.py
backend/app/repositories/: market_data.py  scanner.py
backend/app/schemas/: brokers.py  market_data.py  scanner.py  strategies.py
backend/app/services/: market_data.py  scanner.py  strategies.py
backend/app/strategies/: __init__.py  analytics.py  base.py  cash_secured_put.py  covered_call.py  iron_condor.py
backend/tests/: conftest.py  test_broker_status.py  test_cash_secured_put.py  test_covered_call.py  test_iron_condor.py  test_market_data.py  test_scanner.py  test_system.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/api/: client.ts  marketData.ts  scanner.ts
frontend/src/components/: BackendStatusCard.test.tsx  BackendStatusCard.tsx  PayoffChart.test.tsx  PayoffChart.tsx  ScanConsole.tsx  ScanHistoryPanel.tsx  (+3 more)
md_info/: PHASES_OVERVIEW.md  PHASE_01_LOCAL_FOUNDATION.md  PHASE_02_MARKET_DATA_CORE.md  PHASE_03_STRATEGY_ENGINE_V1.md  PHASE_04_SCANNER_AND_DASHBOARD.md  PHASE_05_PORTFOLIO_REPORTS_RISK.md  PHASE_06_HARDENING_AND_VPS.md  PROJECT_SPEC.md  README.md
(+2 files in other folders)
